# MarketPulseAI

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
marketpulseai/: __init__.py
src/marketpulseai/: __init__.py
src/marketpulseai/api/: main.py
src/marketpulseai/data/: fetch.py
src/marketpulseai/features/: build.py
src/marketpulseai/model/: common.py  train.py  train_dummy.py  train_hist_gradient_boosting.py  train_logistic.py  train_random_forest.py
tests/: test_api.py  test_data_fetch.py  test_feature_build.py  test_model_train.py  test_scaffold.py
