[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketpulseai"
version = "0.1.0"
description = "Hourly XAUUSD direction classification with FastAPI serving."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "joblib",
    "numpy",
    "pandas",
    "python-dotenv",
    "pytest",
    "requests",
    "scikit-learn",
    "uvicorn",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
